--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><!-- Last Published: Fri Mar 27 2020 21:28:31 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="www.matthewtancik.com" data-wf-page="5e6fb768456f961381500a5f"
   data-wf-site="51e0d73d83d06baa7a00000f">
@@ -114,7 +113,7 @@
   <div class="all-wrap">
     <div class="section hero nerf-_v2">
       <div class="container-2 nerf_header_v2 w-container">
-        <h1 class="nerf_title_v2">ChoreoMaster : Choreography-Oriented Music-Driven Dance Synthesis</h1>
+        <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-between Photos</h1>
         <h1 class="nerf_subheader_v2">SIGGRAPH 2021</h1>
         <div class="nerf_authors_list_single w-row row-name">
           <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Kang Chen<sup>1</sup></h1>
