--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </h1>
           <h1 class="nerf_affiliation_v3" style="font-size: 18px;"><sup>2</sup>Tsinghua University</h1>
         </div>
-        -->
+        
 
         <div>
           <span class="center"><img src="images/choreo_teaser.png"></span>
@@ -190,22 +190,18 @@
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Data</strong></div>
           </div>
         </div>
+        -->
         <div class="nerf_slide_nav w-slider-nav w-slider-nav-invert w-round"></div>
       </div>
     </div>
+    
 
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
-        <!-- <div style="padding-top:56.17021276595745%" id="w-node-e5e45b1d55ac-81500a5f"
-          class="w-embed-youtubevideo stega_movie youtube">
-          <iframe src="./Supplemental/ChoreoMaster_Overview.mp4" title="YouTube video player" frameBorder="0"
-            style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
-            allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-        </div> -->
         <div class="w-row">
           <div class="w-col">
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">
-              <source src="./Supplemental/ChoreoMaster_Overview.mp4" type="video/mp4">
+              <source src="./Fig1.mp4" type="video/mp4">
             </video>
           </div>
         </div>
