--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         
         <h1 class="nerf_subheader_v2">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</h1>
         <div class="nerf_authors_list_single w-row row-name">
-          <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei<sup>*</sup></h1>
-          <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Jen-Chun Lin<sup>*</sup></h1>
+          <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei<sup>*</sup> and Jen-Chun Lin<sup>*</sup></h1>
+          <!--<h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Jen-Chun Lin<sup>*</sup></h1>-->
         </div>
         <div class="nerf_authors_list_single nerf_authors_affiliation w-row"
           style="margin-top: 15px;text-align: center;">
