--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       }
 
       .nerf_subheader_v2 {
-        font-size: 6vw;
+        font-size: 20px;
         margin-bottom: 20px;
       }
 
@@ -113,8 +113,7 @@
   <div class="all-wrap">
     <div class="section hero nerf-_v2">
       <div class="container-2 nerf_header_v2 w-container">
-        <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-between Photos</h1>
-        
+        <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-between Photos</h1>        
         <h1 class="nerf_subheader_v2">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</h1>
         <div class="nerf_authors_list_single w-row row-name">
           <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei<sup>*</sup> and Jen-Chun Lin<sup>*</sup></h1>
