--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="w-row">
           <div class="w-col">
             <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
-            <video class="results" loop autoplay playsinline controls width="100%" poster="./Supplemental/poster.png">
+            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig1.mp4" type="video/mp4">
             </video>
           </div>
