--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     .white_section_nerf {
       font-family: fangsong, 'Microsoft Yahei';
       color: #3c3c3c;
+      text-align: justify;
     }
 
     .long-text {
