--- a/index.html
+++ b/index.html
@@ -191,7 +191,20 @@
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <h2 class="white_section_nerf">Abstract</h2>
-        <p class="paragraph-3 nerf_text long-text">Generating realistic 3D human motion has been a fundamental goal of the game/animation industry. This work presents a novel transition generation technique that can bridge the actions of people in the foreground by generating 3D poses and shapes in between photos, allowing 3D animators/novice users to easily create/edit 3D motions. To achieve this, we propose an adaptive motion network (ADAM-Net) that effectively learns human motion from masked action sequences to generate kinematically compliant 3D poses and shapes in-between given temporally-sparse photos. Three core learning designs underpin ADAM-Net. First, we introduce a random masking process that randomly masks images from an action sequence and fills masked regions in latent space by interpolation of unmasked images to simulate various transitions under given temporally-sparse photos. Second, we propose a long-range adaptive motion (L-ADAM)attention module that leverages visual cues observed from human motion to adaptively recalibrate the range that needs attention in a sequence, along with a multi-head cross-attention. Third, we develop a short-range adaptive motion (S-ADAM) attention module that weightedly selects and integrates adjacent feature representations at different levels to strengthen temporal correlation. By coupling these designs, the results demonstrate that ADAM-Net excels not only in generating 3D poses and shapes in-between photos, but also in classic 3D human pose and shape estimation. </p>
+        <p class="paragraph-3 nerf_text long-text">Generating realistic 3D human motion has been a fundamental goal of the 
+          game/animation industry. This work presents a novel transition generation technique that can bridge the actions 
+          of people in the foreground by generating 3D poses and shapes in between photos, allowing 3D animators/novice users 
+          to easily create/edit 3D motions. To achieve this, we propose an adaptive motion network (ADAM-Net) that effectively 
+          learns human motion from masked action sequences to generate kinematically compliant 3D poses and shapes in-between 
+          given temporally-sparse photos. Three core learning designs underpin ADAM-Net. First, we introduce a random masking 
+          process that randomly masks images from an action sequence and fills masked regions in latent space by interpolation 
+          of unmasked images to simulate various transitions under given temporally-sparse photos. Second, we propose a 
+          long-range adaptive motion (L-ADAM)attention module that leverages visual cues observed from human motion to 
+          adaptively recalibrate the range that needs attention in a sequence, along with a multi-head cross-attention. 
+          Third, we develop a short-range adaptive motion (S-ADAM) attention module that weightedly selects and integrates 
+          adjacent feature representations at different levels to strengthen temporal correlation. By coupling these designs, 
+          the results demonstrate that ADAM-Net excels not only in generating 3D poses and shapes in-between photos, but also 
+          in classic 3D human pose and shape estimation. </p>
       </div>
     </div>
 
