--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
         margin-bottom: 10px;
       }
 
-      .nerf_subheader_v2 {
-        font-size: 3vw;
+      .nerf_subheader_v2 {        
+        font-size: 30px;
+        width: 850px;
         margin-bottom: 20px;
       }
 
