--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
         margin-bottom: 10px;
       }
 
-      .nerf_subheader_v2 {        
-        font-size: 30px;
-        width: 850px;
+      .nerf_subheader_v2 {               
+        font-size: 6vw;
         margin-bottom: 20px;
       }
 
@@ -182,7 +181,7 @@
           <div class="w-col">
             <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
             <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
-              <source src="./Fig1.mp4" type="video/mp4">
+              <source src="./Fig1.gif" type="video/mp4">
             </video>
           </div>
         </div>
