--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="w-col">
             <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
             <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
-              <source src="./Fig1.gif" type="video/mp4">
+              <source src="./Fig1.gif">
             </video>
           </div>
         </div>
