--- a/index.html
+++ b/index.html
@@ -179,10 +179,11 @@
       <div class="w-container">
         <div class="w-row">
           <div class="w-col">
-            <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
+            <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">
             <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig1.gif">
-            </video>
+            </video>-->
+            <img src = "./Fig1.gif"></img>
           </div>
         </div>
       </div>
