--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig1.gif">
             </video>-->
-            <img src = "./Fig1.gif"></img>
+            <img src = "./Fig1.gif" width="1164px"></img>
           </div>
         </div>
       </div>
