--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         font-size: 45px;
         width: 850px;
         margin-bottom: 10px;
+        text-align: center;
       }
 
       .nerf_subheader_v2 {               
