--- a/index.html
+++ b/index.html
@@ -229,9 +229,10 @@
       <div class="w-container">
         <div class="w-row">
           <div class="w-col">
-            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
+            <!--<video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig6.mp4">
-            </video>
+            </video>-->
+            <img src = "./Fig6.gif"></img>
           </div>
         </div>
       </div>
