--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="w-col">
             <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
             <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
-              <source src="./Fig1.gif">
+              <source src="./Demo Video-small.mp4">
             </video>
             <!--<img src = "./Fig1.gif" width="1164px"></img>-->
           </div>
