--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <!--<video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig6.mp4">
             </video>-->
-            <img src = "./Fig6.gif"></img>
+            <img src = "./Fig6.gif" width="1184px"></img>
           </div>
         </div>
       </div>
