--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
         </div>
       </div>
     </div>
+
+    
+    <div data-anchor="slide1" class="section nerf_section">
+      <div class="w-container">
+        <div class="w-row">
+          <div class="w-col">
+            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
+              <source src="./Fig7.mp4">
+            </video>          
+          </div>
+        </div>
+      </div>
+    </div>
     
     <div class="w-container w-row">
       <div class="w-col w-col-6 w-col-small-6 w-col-tiny-12">
