--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
       <div class="w-container">
         <div class="w-row">
           <div class="w-col">
-            <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">-->
-            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
-              <source src="./Demo Video-small.mp4">
+            <!--<video class="results" loop="" playsinline="" controls="" width="100%" poster="./Supplemental/poster.png">
+            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">-->            
+            <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Demo Video-small.png">     
+              <source src="./Demo Video-small.mp4" type="video/mp4">
             </video>
             <!--<img src = "./Fig1.gif" width="1164px"></img>-->
           </div>
