--- a/index.html
+++ b/index.html
@@ -231,8 +231,12 @@
           <div class="w-col">
             <!--<video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig6.mp4">
-            </video>-->
-            <img src = "./Fig6.gif" width="1184px"></img>
+            </video>
+            <img src = "./Fig6.gif" width="1184px"></img>-->            
+            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">-->            
+            <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig6.png">     
+              <source src="./Fig6.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
@@ -243,9 +247,13 @@
       <div class="w-container">
         <div class="w-row">
           <div class="w-col">
-            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
+            <!--<video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">
               <source src="./Fig7.mp4">
-            </video>          
+            </video>-->   
+            <video controls autoplay loop playsinline width="100%" poster="./Supplemental/poster.png">-->            
+            <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig7.png">     
+              <source src="./Fig7.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
