--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>ChoreoMaster</title>
-  <meta content="ChoreoMaster." name="description" />
-  <meta content="ChoreoMaster Networks" property="og:title" />
-  <meta content="ChoreoMaster" property="og:description" />
+  <title>PhotosInBetweening</title>
+  <meta content="PhotosInBetweening." name="description" />
+  <meta content="PhotosInBetweening ADAM-Net" property="og:title" />
+  <meta content="PhotosInBetweening" property="og:description" />
   <meta content="summary" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="./choreomaster.css" rel="stylesheet" type="text/css" />
