--- a/index.html
+++ b/index.html
@@ -214,7 +214,15 @@
           in classic 3D human pose and shape estimation. </p>
       </div>
     </div>
-
+    <hr />
+    <div data-anchor="slide1" class="section nerf_section">
+      <div class="w-container">
+        <h2 class="white_section_nerf">Demo</h2>
+        <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Demo Video-small.png">     
+              <source src="./Demo Video-small.mp4" type="video/mp4">
+            </video>
+      </div>
+    </div>
     
     <div class="w-container">
       <span class="center"><img src="./images/choreo_overview.PNG" alt="" class="nerf_network" /></span>
