--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
     
 
-    <div data-anchor="slide1" class="section nerf_section">
+    <!--<div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <div class="w-row">
           <div class="w-col">
@@ -193,7 +193,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <hr />
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
