--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig6.png">     
               <source src="./Fig6.mp4" type="video/mp4">
             </video>
+            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of baseline method (a), TCMR (b), and our ADAM-Net (c) on the challenging in-the-wild 3DPW dataset. The first and last photos in the sequence are given keyframes, which correspond to photos with bright backgrounds and red windows. The photos in-between keyframes are the original image references (i.e., dark background photos). The transition length is set to 5 in this experiment. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions.
+          </h1>
           </div>
         </div>
       </div>
