--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <hr />
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
-        <h2 class="white_section_nerf">More Results</h2>
+        <h2 class="white_section_nerf">Qualitative Evaluation</h2>
       </div>
     </div>
     
