--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <h2 class="white_section_nerf">Qualitative Evaluation</h2>
+        <h2 class="white_section_nerf">- Visual comparisons with the baseline method, TCMR, and MPS-Net.</h2>
       </div>
     </div>
     
