--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
         <div class="grey_container w-container">
           <div class="bibtex">
             <pre><code>@article{choreomaster2021,
-    author = {Chen Kang, Zhipeng Tan, Jin Lei, Song-Hai Zhang, Yuan-Chen Guo, Weidong Zhang, Shi-Min Hu},
-    title = {ChoreoMaster : Choreography-Oriented Music-Driven Dance Synthesis},
-    journal = {ACM Transactions on Graphics (TOG)},
-    volume = {40},
-    number = {4},
-    year = {2021},
-    publisher = {ACM}
+    author = {Wen-Li Wei and Jen-Chun Lin},
+    title = {Bridging Actions: Generate 3D Poses and Shapes In-between Photos},
+    journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
+    volume = {},
+    number = {},
+    year = {2024},
+    publisher = {IEEE}
   }</code></pre>
           </div>
         </div>
