--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         
     
     <hr />
-    <div class="white_section_nerf">
+    <!--<div class="white_section_nerf">-->
       <div class="w-container">
         <h2 class="grey-heading_nerf">BibTeX</h2>
         <div class="grey_container w-container">
@@ -385,7 +385,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!--</div>-->
   </div>
 
 
