--- a/index.html
+++ b/index.html
@@ -291,6 +291,13 @@
       </div>
     </div>
 
+    <hr />
+    <div data-anchor="slide1" class="section nerf_section">
+      <div class="w-container">
+        <h2 class="white_section_nerf">Qualitative Evaluation</h2>
+        <h1 class="nerf_affiliation_v2" style="font-size: 30px;text-align: left;">- Visual effects of ADAM-Net under different transition lengths, inserting/replacing different photos, specified body shape, or failure case.</h1>
+      </div>
+    </div>
     
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
