--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
     <hr />
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
+        <h2 class="white_section_nerf">Qualitative Evaluation</h2>
         <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- Visual effects of ADAM-Net under different transition lengths, inserting/replacing different photos, specified body shape, or failure case.</h1>
       </div>
     </div>
@@ -330,6 +331,7 @@
     <hr />
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
+        <h2 class="white_section_nerf">EXPERIMENTS</h2>
         <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- 3D Joint Transition Generation In-betweening</h1>
       </div>
     </div>
@@ -366,6 +368,7 @@
     <hr />
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
+        <h2 class="white_section_nerf">EXPERIMENTS</h2>
         <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- 3D Human Pose and Shape Estimation from Monocular Video</h1>
       </div>
     </div>
