--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <h2 class="white_section_nerf">Demo</h2>
-        <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Demo Video-small.png">     
+        <video class="results" playsinline="" controls="" width="100%" poster="./Demo Video-small.png">     
               <source src="./Demo Video-small.mp4" type="video/mp4">
             </video>
       </div>
