--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <h2 class="white_section_nerf">Qualitative Evaluation</h2>
-        <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- Visual effects of ADAM-Net under different transition lengths, inserting/replacing different photos.</h1>
+        <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- Visual effects of our <font color="red">ADAM-Net</font> under different transition lengths, inserting/replacing different photos.</h1>
       </div>
     </div>
     
