--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-between Photos</h1>        
         <h1 class="nerf_subheader_v2">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</h1>
         <div class="nerf_authors_list_single w-row row-name">
-          <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei<sup>*</sup> and Jen-Chun Lin<sup>*</sup></h1>
+          <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei and Jen-Chun Lin</h1>
           <!--<h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Jen-Chun Lin<sup>*</sup></h1>-->
         </div>
         <div class="nerf_authors_list_single nerf_authors_affiliation w-row"
@@ -125,11 +125,11 @@
           <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Academia Sinica, Taiwan
           </h1>
         </div>
-        <div class="nerf_authors_list_single nerf_authors_affiliation w-row"
+        <!--<div class="nerf_authors_list_single nerf_authors_affiliation w-row"
           style="margin-top: 15px;text-align: center;">
           <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px"><sup>*</sup>Equal Contribution
           </h1>
-        </div>
+        </div>-->
 
         <div>
           <span class="center"><img src = "./Fig1.gif" width="1164px"></img></span>
