--- a/index.html
+++ b/index.html
@@ -437,7 +437,18 @@
     <!--</div>-->
   </div>
 
-
+  <hr>
+  <table align=center width=1100px>
+      <tr>
+	  <td width=400px>
+ 	      <!--<left>-->
+  	      <center>
+		  <h1>Acknowledgements</h1>
+		  This webpage template was refered from https://netease-gameai.github.io/ChoreoMaster/. Thanks a lot.
+	      </center>
+	  </td>
+      </tr>
+  </table>
 
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=51e0d73d83d06baa7a00000f"
     type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
