--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig17.png">     
               <source src="./Fig17.mp4" type="video/mp4">
             </video>
-            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of TCMR (top), MPS-Net (middle), and our ADAM-Net (bottom) for pose and shape estimation on the challenging in-the-wild 3DPW dataset (left) and video downloaded from the Internet (right). (Corresponding to Fig. 17 in our paper)
+            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of TCMR (left), MPS-Net (middle), and our ADAM-Net (right) for pose and shape estimation on the challenging in-the-wild 3DPW dataset and video downloaded from the Internet. (Corresponding to Fig. 17 in our paper)
             </h1>
           </div>
         </div>
