--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="nerf_authors_list_single nerf_authors_affiliation w-row"
           style="margin-top: 15px;text-align: center;">
-          <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Academia Sinica, Taiwan
+          <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Institute of Information Science, Academia Sinica, Taiwan
           </h1>
         </div>
         <!--<div class="nerf_authors_list_single nerf_authors_affiliation w-row"
