--- a/index.html
+++ b/index.html
@@ -157,15 +157,17 @@
             <a href="https://github.com/NetEase-GameAI/ChoreoMaster" class="link-block w-inline-block">
               <img src="./images/data.png" alt="data" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
-        
+        -->
         
         <div class="w-container w-row">
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
-            <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong></div>
+            <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper (Coming soon...)</strong></div>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
-            <div class="text-block-2"><strong class="bold-text-nerf_v2">Supplemental Document</strong></div>
+            <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
           </div>
+        </div>
+	<!--
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2">
               <strong class="bold-text-nerf_v2">User Study Video</strong>
