--- a/index.html
+++ b/index.html
@@ -107,11 +107,6 @@
         line-height: 28px !important;
       }
     }
-        /* 外层容器样式，用于居中 */
-        .centered-container {
-            display: flex; /* 启用Flexbox */
-            justify-content: center; /* 水平居中 */
-        }
   </style>
 </head>
 
@@ -142,8 +137,9 @@
           </h1>
         </div>
 
-	<div class="centered-container">
         <div class="w-container w-row">
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
+          </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <a href=" " target="_blank" class="link-block w-inline-block">
               <img src="./pngtree-paper-icon-png-image_6294297.png" alt="paper (Coming soon...)" class="paper_img image-8 github_icon_nerf_v2" /></a>
@@ -157,12 +153,13 @@
         
         <div class="w-container w-row">
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
+          </div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper (Coming soon...)</strong></div>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
           </div>
-        </div>
         </div>
 	<!--
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
