--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           given temporally-sparse photos. Three core learning designs underpin ADAM-Net. First, we introduce a random masking 
           process that randomly masks images from an action sequence and fills masked regions in latent space by interpolation 
           of unmasked images to simulate various transitions under given temporally-sparse photos. Second, we propose a 
-          long-range adaptive motion (L-ADAM)attention module that leverages visual cues observed from human motion to 
+          long-range adaptive motion (L-ADAM) attention module that leverages visual cues observed from human motion to 
           adaptively recalibrate the range that needs attention in a sequence, along with a multi-head cross-attention. 
           Third, we develop a short-range adaptive motion (S-ADAM) attention module that weightedly selects and integrates 
           adjacent feature representations at different levels to strengthen temporal correlation. By coupling these designs, 
@@ -252,7 +252,7 @@
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig7.png">     
               <source src="./Fig7.mp4" type="video/mp4">
             </video>
-            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of TCMR (a) and our ADAM-Net (b) on the challenging in-the-wild MPI-INF-3DHP dataset, where the transition length is set to 20. Due to the extended length of the generated motion transition (longer transition length setting), we have adopted an equal interval sampling method for the 20 generated 3D poses and shapes to provide a clearer presentation of the results. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 7 in our paper)
+            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of TCMR (a) and our ADAM-Net (b) on the challenging in-the-wild MPI-INF-3DHP dataset, where the transition length is set to 20. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 7 in our paper)
             </h1>
           </div>
         </div>
@@ -268,7 +268,7 @@
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig8.png">     
               <source src="./Fig8.mp4" type="video/mp4">
             </video>
-            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of baseline method (a), TCMR (b), MPS-Net (c), and our ADAM-Net (d) on photos downloaded from the Internet, where the transition length is set to 31. The results are presented by sampling 31 generated 3D poses and shapes at equal intervals for better viewing. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 8 in our paper)
+            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison of baseline method (a), TCMR (b), MPS-Net (c), and our ADAM-Net (d) on photos downloaded from the Internet, where the transition length is set to 31. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 8 in our paper)
             </h1>
           </div>
         </div>
@@ -284,7 +284,7 @@
             <video class="results" loop="" playsinline="" controls="" width="100%" poster="./Fig9.png">     
               <source src="./Fig9.mp4" type="video/mp4">
             </video>
-            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison among our ADAM-Net, ADAM-Net-only MHA [21], and a linear interpolation method where the 3D human meshes for the start and end keyframes of the linear interpolation method are taken from ADAM-Net. The results are presented by sampling 31 generated 3D poses and shapes at equal intervals, and unfolded for better viewing. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 9 in our paper)
+            <h1 class="nerf_affiliation_v3" style="margin-right: 40px;font-size: 18px">Qualitative comparison among our ADAM-Net, ADAM-Net-only MHA [21], and a linear interpolation method where the 3D human meshes for the start and end keyframes of the linear interpolation method are taken from ADAM-Net. Bright colors represent the generated 3D human pose and shape of given photos, while dark colors represent the generated transitions preserved after sampling. (Corresponding to Fig. 9 in our paper)
             </h1>
           </div>
         </div>
