--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
   	      <center>
 		  <h1>Acknowledgements</h1>
 		  This webpage template was refered from https://netease-gameai.github.io/ChoreoMaster/. Thanks a lot.
+		  All images and videos on the website are for research purposes only.
 	      </center>
 	  </td>
       </tr>
