--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
-            <a href=" " target="_blank" class="link-block w-inline-block">
+            <a href="https://ieeexplore.ieee.org/document/10497888" target="_blank" class="link-block w-inline-block">
               <img src="./pngtree-paper-icon-png-image_6294297.png" alt="paper (Coming soon...)" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
