--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
-            <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper (Coming soon...)</strong></div>
+            <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong></div>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
