--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <title>PhotosInBetweening</title>
   <meta content="PhotosInBetweening." name="description" />
-  <meta content="PhotosInBetweening AdMoNet" property="og:title" />
+  <meta content="PhotosInBetweening ADAM-Net" property="og:title" />
   <meta content="PhotosInBetweening" property="og:description" />
   <meta content="summary" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
