--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <img src="./pngtree-paper-icon-png-image_6294297.png" alt="paper" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
-            <a href="https://ieeexplore.ieee.org/document/10497888" target="_blank" class="link-block w-inline-block">
+            <a href="TPAMI__AQ___fixWarning___18pages___supplementary_material_3.pdf" target="_blank" class="link-block w-inline-block">
               <img src="./supporting-material-icon-3.png" alt="supplementary material" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
