--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
         <div class="w-container w-row">
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
+          </div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <a href="https://ieeexplore.ieee.org/document/10497888" target="_blank" class="link-block w-inline-block">
               <img src="./pngtree-paper-icon-png-image_6294297.png" alt="paper" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
@@ -146,9 +148,13 @@
               <img src="./6455678.png" alt="Code (Coming soon...)"
                 class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
+          </div>
 	</div>
         
         <div class="w-container w-row">
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
+          </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong></div>
           </div>
@@ -157,6 +163,8 @@
           </div>
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
+          </div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
           </div>
         </div>
 	<!--
