--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
         </div>
 
         <div class="w-container w-row">
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <a href="https://ieeexplore.ieee.org/document/10497888" target="_blank" class="link-block w-inline-block">
               <img src="./pngtree-paper-icon-png-image_6294297.png" alt="paper" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <a href="TPAMI__AQ___fixWarning___18pages___supplementary_material_3.pdf" target="_blank" class="link-block w-inline-block">
               <img src="./supporting-material-icon-3-removebg-preview.png" alt="supplementary material" class="paper_img image-8 github_icon_nerf_v2" /></a>
           </div>
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <a href=" " target="_blank" class="link-block w-inline-block">
               <img src="./6455678.png" alt="Code (Coming soon...)"
                 class="paper_img image-8 github_icon_nerf_v2" /></a>
@@ -149,13 +149,13 @@
 	</div>
         
         <div class="w-container w-row">
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong></div>
           </div>
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Supplementary Material</strong></div>
           </div>
-          <div>
+          <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
           </div>
         </div>
