--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
             <div class="text-block-2"><strong class="bold-text-nerf_v2">Code (Coming soon...)</strong></div>
           </div>
         </div>
+		
+        <div class="w-container w-row">
+          <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+            <div class="text-block-2"><strong class="bold-text-nerf_v2"></strong></div>
+          </div>
+          <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+            <div class="text-block-2"><strong class="bold-text-nerf_v2">(Visualization)</strong></div>
+          </div>
+          <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+            <div class="text-block-2"><strong class="bold-text-nerf_v2"></strong></div>
+          </div>
+        </div>
 	<!--
           <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3">
             <div class="text-block-2">
