--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="text-block-2"><strong class="bold-text-nerf_v2"></strong></div>
           </div>
           <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-            <div class="text-block-2"><strong class="bold-text-nerf_v2">(Visualization of Attentions)</strong></div>
+            <div class="text-block-2"><strong class="bold-text-nerf_v2">(Visualization of Attention)</strong></div>
           </div>
           <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
             <div class="text-block-2"><strong class="bold-text-nerf_v2"></strong></div>
