--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div class="all-wrap">
     <div class="section hero nerf-_v2">
       <div class="container-2 nerf_header_v2 w-container">
-        <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-between Photos</h1>        
+        <h1 class="nerf_title_v2">Bridging Actions: Generate 3D Poses and Shapes In-Between Photos</h1>        
         <h1 class="nerf_subheader_v2">accepted by IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</h1>
         <h1 class="nerf_affiliation_v2" style="margin-right: 20px;">Wen-Li Wei and Jen-Chun Lin</h1>
 	<br>
@@ -447,7 +447,7 @@
           <div class="bibtex">
             <pre><code>@article{In-betweenPhotos2024,
     author = {Wen-Li Wei and Jen-Chun Lin},
-    title = {Bridging Actions: Generate 3D Poses and Shapes In-between Photos},
+    title = {Bridging Actions: Generate 3D Poses and Shapes In-Between Photos},
     journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
     volume = {},
     number = {},
