--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <div data-anchor="slide1" class="section nerf_section">
       <div class="w-container">
         <h2 class="white_section_nerf">EXPERIMENTS</h2>
-        <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- 3D Joint Transition Generation In-betweening</h1>
+        <h1 class="nerf_affiliation_v2" style="font-size: 24px;text-align: left;">- 3D Joint Transition Generation In-Betweening</h1>
       </div>
     </div>
     
