--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 		  	   	  	<br> [7] F. G. Harvey, M. Yurick, D. Nowrouzezahrai, and C. Pal, “Robust motion in-betweening,” ACM Transactions on Graphics (TOG), vol. 39, no. 4, 2020.</br>
 		  	     		<br> [10] W.-L. Wei, J.-C. Lin, T.-L. Liu, and H.-Y. M. Liao, “Capturing humans in motion: Temporal-attentive 3D human pose and shape estimation from monocular video,” in IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2022.</br>
 	  		     		<br> [21] A. Vaswani, N. M. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. N. Gomez, Ł. Kaiser, and I. Polosukhin, “Attention is all you need,” in Advances in Neural Information Processing Systems (NeurIPS), 2017.</br>
-	  		     		<br> [56] Z. Li, J. Liu, Z. Zhang, S. Xu, and Y. Yan, “Cliff: Carrying location information in full frames into human pose and shape estimation,”in Proceedings of the European Conference on Computer Vision (ECCV), 2022.</br>
+	  		     		<br> [56] Z. Li, J. Liu, Z. Zhang, S. Xu, and Y. Yan, “CLIFF: Carrying location information in full frames into human pose and shape estimation,”in Proceedings of the European Conference on Computer Vision (ECCV), 2022.</br>
            </td>
 	      </tr>
   	</table>
