--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <h2 class="grey-heading_nerf">BibTeX</h2>
         <div class="grey_container w-container">
           <div class="bibtex">
-            <pre><code>@article{In-betweenPhotos2024,
+            <pre><code>@article{In-BetweenPhotos2024,
     author = {Wen-Li Wei and Jen-Chun Lin},
     title = {Bridging Actions: Generate 3D Poses and Shapes In-Between Photos},
     journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
